--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.6",
+    "nodemailer": "^4.3.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pitstop": "^0.2.1",
     "route-pattern": "0.0.6",
+    "sendotp": "^1.2.8",
     "underscore": "^1.8.3",
     "winston": "^1.0.1",
     "wrench": "^1.5.8"
